Attempt to fix header text wrap

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -199,6 +199,7 @@ nav {
     letter-spacing: -.05em;
     font-weight: $font-regular;
     line-height: 1.1;
+    white-space: nowrap;
   }
 }
 
